--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,31 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
+  /* background: linear-gradient(90deg, rgba(234,33,52,1) 66%, rgba(253,29,29,1) 94%, rgba(252,176,69,1) 100%); */
+  /* background: #000000;
+  background: -webkit-linear-gradient(
+    to bottom,
+    #434343,
+    #000000
+  ); 
+  background: linear-gradient(
+    to bottom,
+    #434343,
+    #000000
+  ); */
+  background: rgb(223, 233, 243);
+  background: radial-gradient(
+    circle,
+    rgba(223, 233, 243, 1) 50%,
+    rgba(255, 255, 255, 1) 100%
+  );
+
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  /* color: white; */
 }
